--- a/create_example_hists_jcdl2025.ipynb
+++ b/create_example_hists_jcdl2025.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "82acb676",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
     "\n",
     "import utils.distribution_utils\n",
     "\n",
-    "from utils.plot_utils import markers\n",
+    "from utils.plot_utils import markers, make_base_plot\n",
     "marker_sizes = np.arange(0,10)+1\n",
     "line_list_thick = np.arange(1,10)\n",
     "\n",
@@ -575,34 +575,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5880bc59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_base_plot(plot_style, color_map, dpi, nrows, ncols, \n",
-    "                   base=5, verbose=True, tight_layout = True):\n",
-    "    plt.close('all')\n",
-    "    plt.style.use(plot_style)\n",
-    "    plt.set_cmap(color_map) \n",
-    "    figsize = (base*ncols*aspect_fig, base*nrows) # w,h\n",
-    "    if verbose: print('figsize (w,h) =', figsize)\n",
+    "# def make_base_plot(plot_style, color_map, dpi, nrows, ncols, \n",
+    "#                    base=5, verbose=True, tight_layout = True):\n",
+    "#     plt.close('all')\n",
+    "#     plt.style.use(plot_style)\n",
+    "#     plt.set_cmap(color_map) \n",
+    "#     figsize = (base*ncols*aspect_fig, base*nrows) # w,h\n",
+    "#     if verbose: print('figsize (w,h) =', figsize)\n",
     "\n",
-    "    if tight_layout:\n",
-    "        fig = plt.figure(figsize=figsize, dpi=dpi,layout='tight')\n",
-    "    else:\n",
-    "        fig = plt.figure(figsize=figsize, dpi=dpi)\n",
+    "#     if tight_layout:\n",
+    "#         fig = plt.figure(figsize=figsize, dpi=dpi,layout='tight')\n",
+    "#     else:\n",
+    "#         fig = plt.figure(figsize=figsize, dpi=dpi)\n",
     "\n",
-    "    axes = []\n",
-    "    plot_inds = []\n",
-    "    for i in range(nrows):\n",
-    "        for j in range(ncols):\n",
-    "            iplot = (i*nrows) + j\n",
-    "            ax = fig.add_subplot(nrows, ncols, iplot + 1)\n",
-    "            axes.append(ax)\n",
-    "            plot_inds.append([i,j])\n",
+    "#     axes = []\n",
+    "#     plot_inds = []\n",
+    "#     for i in range(nrows):\n",
+    "#         for j in range(ncols):\n",
+    "#             iplot = (i*nrows) + j\n",
+    "#             ax = fig.add_subplot(nrows, ncols, iplot + 1)\n",
+    "#             axes.append(ax)\n",
+    "#             plot_inds.append([i,j])\n",
     "\n",
-    "    return fig, axes, plot_inds #, axes, plot_inds"
+    "#     return fig, axes, plot_inds #, axes, plot_inds"
    ]
   },
   {
