--- a/create_example_lines_jcdl2025.ipynb
+++ b/create_example_lines_jcdl2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a384e543",
    "metadata": {},
    "outputs": [],
@@ -24,10 +24,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "82acb676",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'make_base_plot' from 'utils.plot_utils' (/Users/jnaiman/LLM_VQA_JCDL2025/utils/plot_utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 31\u001b[39m\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# written libs -- will update locally\u001b[39;00m\n\u001b[32m     27\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msynthetic_fig_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m subset_by_percent, \\\n\u001b[32m     28\u001b[39m  get_nrows_and_ncols, normalize_params_prob, get_ticks, get_titles_or_labels, \\\n\u001b[32m     29\u001b[39m  get_font_info\n\u001b[32m---> \u001b[39m\u001b[32m31\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mplot_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_contour_plot, get_histogram_plot, \\\n\u001b[32m     32\u001b[39m    get_line_plot, get_scatter_plot, make_plot, colorbar_mods, make_base_plot\u001b[38;5;66;03m#, get_line_plot\u001b[39;00m\n\u001b[32m     34\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtext_utils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_popular_nouns, get_inline_math\n\u001b[32m     36\u001b[39m \u001b[38;5;66;03m# create a bunch of fake figures\u001b[39;00m\n",
+      "\u001b[31mImportError\u001b[39m: cannot import name 'make_base_plot' from 'utils.plot_utils' (/Users/jnaiman/LLM_VQA_JCDL2025/utils/plot_utils.py)"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -60,7 +72,7 @@
     " get_font_info\n",
     "\n",
     "from utils.plot_utils import get_contour_plot, get_histogram_plot, \\\n",
-    "   get_line_plot, get_scatter_plot, make_plot, colorbar_mods#, get_line_plot\n",
+    "   get_line_plot, get_scatter_plot, make_plot, colorbar_mods, make_base_plot#, get_line_plot\n",
     "\n",
     "from utils.text_utils import get_popular_nouns, get_inline_math\n",
     "\n",
@@ -98,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4d785d10",
    "metadata": {},
    "outputs": [],
@@ -116,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b066179c",
    "metadata": {},
    "outputs": [],
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "52bbd3e2",
    "metadata": {},
    "outputs": [],
@@ -158,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9f0dc2a5",
    "metadata": {},
    "outputs": [
@@ -201,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "c1be6ee7",
    "metadata": {},
    "outputs": [],
@@ -211,49 +223,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "5a9fe905",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# only histograms for this one\n",
+    "# probability of getting a line -- only lines here\n",
+    "plot_params['line']['prob'] = 1\n",
     "\n",
     "# probability of getting a scatter plot\n",
     "plot_params['scatter']['prob'] = 0\n",
-    "# probability of getting a line\n",
-    "plot_params['line']['prob'] = 0\n",
     "# prob of getting a contour plot\n",
-    "plot_params['contour']['prob'] = 0"
+    "plot_params['contour']['prob'] = 0\n",
+    "# prob for getting a histogram\n",
+    "plot_params['histogram']['prob'] = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "2d767f07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prob for getting a histogram\n",
-    "plot_params['histogram']['prob'] = 1\n",
-    "\n",
-    "\n",
-    "linestyles_hist = ['-'] # only use a subset of the linestyles\n",
-    "\n",
-    "plot_params['histogram'] = plot_params['histogram'].copy()\n",
-    "\n",
-    "# no horizontal plots\n",
-    "plot_params['histogram']['horizontal prob'] = 0.0\n",
-    "\n",
-    "# random distributions\n",
-    "plot_params['histogram']['distribution']['random']['prob'] = 0\n",
-    "\n",
-    "# gaussian mixture model\n",
-    "plot_params['histogram']['distribution']['gmm']['prob'] = 1\n",
-    "plot_params['histogram']['distribution']['gmm']['nclusters'] = {'min': 1, 'max': 5}\n",
-    "plot_params['histogram']['distribution']['gmm']['nsamples'] = {'min': 10, 'max': 50}\n",
-    "\n",
-    "# linear distributions prob\n",
-    "plot_params['histogram']['distribution']['linear']['prob'] = 1"
+    "plot_params['line']['nlines'] = {'min':1, 'max':5}"
    ]
   },
   {
@@ -266,18 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "fb8bfe5e-0ea1-4ea4-bc3d-b54cc1efa174",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "panel_params['number prob']['median'] = 4 # smaller, usually use 4-ish, 1 for debugging\n",
-    "panel_params['number prob']['max'] = 25 # 2 for debugging, 25 for typical run"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "8b36fa32-a85d-4dbe-a4f5-bf0be3685094",
    "metadata": {},
    "outputs": [],
@@ -298,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "a1cd495c-be76-4d40-bc74-86e5efecf417",
    "metadata": {},
    "outputs": [
@@ -330,9 +312,9 @@
       "plot_types_params['line']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
       "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
-      "plot_types_params['histogram']['distribution'] probabilities did not add to 1! total = 2\n",
+      "plot_types_params['histogram']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
-      "now:  [0.0, 0.5, 0.5]\n",
+      "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
       "plot_types_params['scatter']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
       "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
@@ -344,10 +326,10 @@
     {
      "data": {
       "text/plain": [
-       "{'line': {'prob': 0,\n",
+       "{'line': {'prob': 1,\n",
        "  'npoints': {'min': 10, 'max': 11},\n",
        "  'line thick': {'min': 1, 'max': 5},\n",
-       "  'nlines': {'min': 2, 'max': 3},\n",
+       "  'nlines': {'min': 1, 'max': 5},\n",
        "  'xmin': -10000,\n",
        "  'xmax': 10000,\n",
        "  'ymin': -10000,\n",
@@ -368,7 +350,7 @@
        "    'nsamples': {'min': 10, 'max': 500},\n",
        "    'cluster std': {'min': -2, 'max': 0.5},\n",
        "    'noise': {'min': 0.05, 'max': 0.25}}}},\n",
-       " 'histogram': {'prob': 1,\n",
+       " 'histogram': {'prob': 0,\n",
        "  'npoints': {'min': 10, 'max': 10000},\n",
        "  'nbins': {'min': 1, 'max': 100},\n",
        "  'rwidth': {'min': 0.2, 'max': 1.0},\n",
@@ -378,19 +360,19 @@
        "  'xmax': 10000,\n",
        "  'error bars': {'elinewidth': {'min': 1, 'max': 5},\n",
        "   'x': {'prob': 1, 'size': {'min': 0.01, 'max': 0.1}}},\n",
-       "  'horizontal prob': 0.0,\n",
-       "  'distribution': {'random': {'prob': 0.0},\n",
-       "   'linear': {'prob': 0.5,\n",
+       "  'horizontal prob': 0.25,\n",
+       "  'distribution': {'random': {'prob': 0.3333333333333333},\n",
+       "   'linear': {'prob': 0.3333333333333333,\n",
        "    'intersect': (-100, 100),\n",
        "    'slope': (-5, 5),\n",
        "    'noise': (0, 0.25)},\n",
-       "   'gmm': {'prob': 0.5,\n",
+       "   'gmm': {'prob': 0.3333333333333333,\n",
        "    'xmin': -10000,\n",
        "    'xmax': 10000,\n",
        "    'ymin': -10000,\n",
        "    'ymax': 10000,\n",
-       "    'nclusters': {'min': 1, 'max': 5},\n",
-       "    'nsamples': {'min': 10, 'max': 50},\n",
+       "    'nclusters': {'min': 1, 'max': 20},\n",
+       "    'nsamples': {'min': 10, 'max': 500},\n",
        "    'cluster std': {'min': -1, 'max': 1.5},\n",
        "    'noise': {'min': 0.05, 'max': 0.25}}}},\n",
        " 'scatter': {'prob': 0,\n",
@@ -459,7 +441,7 @@
        "    'color noise prob': 0.5}}}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "2751985c",
    "metadata": {},
    "outputs": [
@@ -514,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "27aa8e6c",
    "metadata": {},
    "outputs": [
@@ -539,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "3d28ba6e",
    "metadata": {},
    "outputs": [],
@@ -561,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "4a4a2738",
    "metadata": {},
    "outputs": [],
@@ -575,34 +557,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5880bc59",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_base_plot(plot_style, color_map, dpi, nrows, ncols, \n",
-    "                   base=5, verbose=True, tight_layout = True):\n",
-    "    plt.close('all')\n",
-    "    plt.style.use(plot_style)\n",
-    "    plt.set_cmap(color_map) \n",
-    "    figsize = (base*ncols*aspect_fig, base*nrows) # w,h\n",
-    "    if verbose: print('figsize (w,h) =', figsize)\n",
+    "# def make_base_plot(plot_style, color_map, dpi, nrows, ncols, \n",
+    "#                    base=5, verbose=True, tight_layout = True):\n",
+    "#     plt.close('all')\n",
+    "#     plt.style.use(plot_style)\n",
+    "#     plt.set_cmap(color_map) \n",
+    "#     figsize = (base*ncols*aspect_fig, base*nrows) # w,h\n",
+    "#     if verbose: print('figsize (w,h) =', figsize)\n",
     "\n",
-    "    if tight_layout:\n",
-    "        fig = plt.figure(figsize=figsize, dpi=dpi,layout='tight')\n",
-    "    else:\n",
-    "        fig = plt.figure(figsize=figsize, dpi=dpi)\n",
+    "#     if tight_layout:\n",
+    "#         fig = plt.figure(figsize=figsize, dpi=dpi,layout='tight')\n",
+    "#     else:\n",
+    "#         fig = plt.figure(figsize=figsize, dpi=dpi)\n",
     "\n",
-    "    axes = []\n",
-    "    plot_inds = []\n",
-    "    for i in range(nrows):\n",
-    "        for j in range(ncols):\n",
-    "            iplot = (i*nrows) + j\n",
-    "            ax = fig.add_subplot(nrows, ncols, iplot + 1)\n",
-    "            axes.append(ax)\n",
-    "            plot_inds.append([i,j])\n",
+    "#     axes = []\n",
+    "#     plot_inds = []\n",
+    "#     for i in range(nrows):\n",
+    "#         for j in range(ncols):\n",
+    "#             iplot = (i*nrows) + j\n",
+    "#             ax = fig.add_subplot(nrows, ncols, iplot + 1)\n",
+    "#             axes.append(ax)\n",
+    "#             plot_inds.append([i,j])\n",
     "\n",
-    "    return fig, axes, plot_inds #, axes, plot_inds"
+    "#     return fig, axes, plot_inds #, axes, plot_inds"
    ]
   },
   {
