--- a/other_datasets/mathvista_paperqa_test.ipynb
+++ b/other_datasets/mathvista_paperqa_test.ipynb
@@ -2,52 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fec3d8de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from mlcroissant import Dataset\n",
-    "\n",
-    "# ds = Dataset(jsonld=\"https://huggingface.co/api/datasets/AI4Math/MathVista/croissant\")\n",
-    "# records = ds.records(\"default\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
-   "id": "7c185a44",
+   "id": "2b124072",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# import itertools\n",
-    "\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# df = (\n",
-    "#     pd.DataFrame(list(itertools.islice(records, 100)))\n",
-    "#     .head(5)\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "1adb7300",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'datasets'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mdatasets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_dataset\n\u001b[32m      3\u001b[39m ds = load_dataset(\u001b[33m\"\u001b[39m\u001b[33mAI4Math/MathVista\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'datasets'"
-     ]
-    }
-   ],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
@@ -56,8 +14,206 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "c0390e16",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['testmini', 'test'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9dae9353",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = ds['test'].to_pandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "968713dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pid</th>\n",
+       "      <th>question</th>\n",
+       "      <th>image</th>\n",
+       "      <th>decoded_image</th>\n",
+       "      <th>choices</th>\n",
+       "      <th>unit</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>answer</th>\n",
+       "      <th>question_type</th>\n",
+       "      <th>answer_type</th>\n",
+       "      <th>metadata</th>\n",
+       "      <th>query</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>In how many years, is the percentage of labor ...</td>\n",
+       "      <td>images/1001.jpg</td>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>free_form</td>\n",
+       "      <td>integer</td>\n",
+       "      <td>{'category': 'general-vqa', 'context': 'scatte...</td>\n",
+       "      <td>Hint: Please answer the question requiring an ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>Are there fewer small rubber objects that are ...</td>\n",
+       "      <td>images/1002.jpg</td>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>[Yes, No]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>multi_choice</td>\n",
+       "      <td>text</td>\n",
+       "      <td>{'category': 'general-vqa', 'context': 'synthe...</td>\n",
+       "      <td>Hint: Please answer the question and provide t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>The players on a quiz show received the follow...</td>\n",
+       "      <td>images/1003.jpg</td>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>free_form</td>\n",
+       "      <td>integer</td>\n",
+       "      <td>{'category': 'math-targeted-vqa', 'context': '...</td>\n",
+       "      <td>Hint: Please answer the question requiring an ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>Some friends played a trivia game and recorded...</td>\n",
+       "      <td>images/1004.jpg</td>\n",
+       "      <td>{'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>free_form</td>\n",
+       "      <td>integer</td>\n",
+       "      <td>{'category': 'math-targeted-vqa', 'context': '...</td>\n",
+       "      <td>Hint: Please answer the question requiring an ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>As shown in the figure, in ⊙O, AB ∥ CD, ∠BCD =...</td>\n",
+       "      <td>images/1005.jpg</td>\n",
+       "      <td>{'bytes': b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x...</td>\n",
+       "      <td>[110°, 70°, 80°, 100°]</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td></td>\n",
+       "      <td>multi_choice</td>\n",
+       "      <td>text</td>\n",
+       "      <td>{'category': 'math-targeted-vqa', 'context': '...</td>\n",
+       "      <td>Hint: Please answer the question and provide t...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    pid                                           question            image  \\\n",
+       "0  1001  In how many years, is the percentage of labor ...  images/1001.jpg   \n",
+       "1  1002  Are there fewer small rubber objects that are ...  images/1002.jpg   \n",
+       "2  1003  The players on a quiz show received the follow...  images/1003.jpg   \n",
+       "3  1004  Some friends played a trivia game and recorded...  images/1004.jpg   \n",
+       "4  1005  As shown in the figure, in ⊙O, AB ∥ CD, ∠BCD =...  images/1005.jpg   \n",
+       "\n",
+       "                                       decoded_image                 choices  \\\n",
+       "0  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...                    None   \n",
+       "1  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...               [Yes, No]   \n",
+       "2  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...                    None   \n",
+       "3  {'bytes': b'\\x89PNG\\r\\n\\x1a\\n\\x00\\x00\\x00\\rIHD...                    None   \n",
+       "4  {'bytes': b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x...  [110°, 70°, 80°, 100°]   \n",
+       "\n",
+       "   unit  precision answer question_type answer_type  \\\n",
+       "0  None        NaN            free_form     integer   \n",
+       "1  None        NaN         multi_choice        text   \n",
+       "2  None        NaN            free_form     integer   \n",
+       "3  None        NaN            free_form     integer   \n",
+       "4  None        NaN         multi_choice        text   \n",
+       "\n",
+       "                                            metadata  \\\n",
+       "0  {'category': 'general-vqa', 'context': 'scatte...   \n",
+       "1  {'category': 'general-vqa', 'context': 'synthe...   \n",
+       "2  {'category': 'math-targeted-vqa', 'context': '...   \n",
+       "3  {'category': 'math-targeted-vqa', 'context': '...   \n",
+       "4  {'category': 'math-targeted-vqa', 'context': '...   \n",
+       "\n",
+       "                                               query  \n",
+       "0  Hint: Please answer the question requiring an ...  \n",
+       "1  Hint: Please answer the question and provide t...  \n",
+       "2  Hint: Please answer the question requiring an ...  \n",
+       "3  Hint: Please answer the question requiring an ...  \n",
+       "4  Hint: Please answer the question and provide t...  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7732751c",
+   "id": "3fd9b0c5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -65,7 +221,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3098c283",
+   "id": "3c5b46a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350d698e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fa18de7",
    "metadata": {},
    "outputs": [],
    "source": []
