--- a/other_datasets/mathvista_paperqa_test.ipynb
+++ b/other_datasets/mathvista_paperqa_test.ipynb
@@ -212,11 +212,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "3fd9b0c5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'category': 'general-vqa',\n",
+       " 'context': 'natural image',\n",
+       " 'grade': 'daily life',\n",
+       " 'img_height': 936,\n",
+       " 'img_width': 664,\n",
+       " 'language': 'english',\n",
+       " 'skills': array(['arithmetic reasoning', 'numeric commonsense'], dtype=object),\n",
+       " 'source': 'KVQA',\n",
+       " 'split': 'test',\n",
+       " 'task': 'visual question answering'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sample(1)['metadata'].values[0]"
+   ]
   },
   {
    "cell_type": "code",
