--- a/parse_zooniverse_human_data.ipynb
+++ b/parse_zooniverse_human_data.ipynb
@@ -148,118 +148,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 125,
    "id": "6c163e2a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>metadata</th>\n",
-       "      <th>annotations</th>\n",
-       "      <th>subject_ids</th>\n",
-       "      <th>annotators</th>\n",
-       "      <th>image file</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>{\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...</td>\n",
-       "      <td>[{\"task\":\"T0\",\"value\":\"1\",\"task_label\":\"How ma...</td>\n",
-       "      <td>112268275</td>\n",
-       "      <td>annotator1</td>\n",
-       "      <td>id_0041.jpeg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>{\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...</td>\n",
-       "      <td>[{\"task\":\"T0\",\"value\":\"3\",\"task_label\":\"How ma...</td>\n",
-       "      <td>112268248</td>\n",
-       "      <td>annotator1</td>\n",
-       "      <td>id_0014.jpeg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>{\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...</td>\n",
-       "      <td>[{\"task\":\"T0\",\"value\":\"2\",\"task_label\":\"How ma...</td>\n",
-       "      <td>112268262</td>\n",
-       "      <td>annotator1</td>\n",
-       "      <td>id_0028.jpeg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>{\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...</td>\n",
-       "      <td>[{\"task\":\"T0\",\"value\":\"2\",\"task_label\":\"How ma...</td>\n",
-       "      <td>112268291</td>\n",
-       "      <td>annotator1</td>\n",
-       "      <td>id_0057.jpeg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>{\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...</td>\n",
-       "      <td>[{\"task\":\"T0\",\"value\":\"1\",\"task_label\":\"How ma...</td>\n",
-       "      <td>112268254</td>\n",
-       "      <td>annotator1</td>\n",
-       "      <td>id_0020.jpeg</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            metadata  \\\n",
-       "1  {\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...   \n",
-       "2  {\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...   \n",
-       "3  {\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...   \n",
-       "4  {\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...   \n",
-       "5  {\"source\":\"api\",\"session\":\"bc9ecd19a25e8303652...   \n",
-       "\n",
-       "                                         annotations  subject_ids  annotators  \\\n",
-       "1  [{\"task\":\"T0\",\"value\":\"1\",\"task_label\":\"How ma...    112268275  annotator1   \n",
-       "2  [{\"task\":\"T0\",\"value\":\"3\",\"task_label\":\"How ma...    112268248  annotator1   \n",
-       "3  [{\"task\":\"T0\",\"value\":\"2\",\"task_label\":\"How ma...    112268262  annotator1   \n",
-       "4  [{\"task\":\"T0\",\"value\":\"2\",\"task_label\":\"How ma...    112268291  annotator1   \n",
-       "5  [{\"task\":\"T0\",\"value\":\"1\",\"task_label\":\"How ma...    112268254  annotator1   \n",
-       "\n",
-       "     image file  \n",
-       "1  id_0041.jpeg  \n",
-       "2  id_0014.jpeg  \n",
-       "3  id_0028.jpeg  \n",
-       "4  id_0057.jpeg  \n",
-       "5  id_0020.jpeg  "
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dfout.head()"
+    "#dfout.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "id": "eac5ca54",
    "metadata": {},
    "outputs": [],
@@ -280,15 +179,14 @@
     "        elif ('median' in ann['task_label'].lower()) and ('draw a line' in ann['task_label'].lower()):\n",
     "            ann_medDraw.append(float(ann['value'][0]['x']))\n",
     "\n",
-    "# for human line draw -- need to translate this from pixel location to x/y\n",
-    "\n",
     "\n",
     "df2 = dfout[['annotators','image file']].copy()\n",
     "df2['Human nGaussians'] = ann_nGaussians\n",
     "df2['Human median (number)'] = ann_medNum\n",
-    "df2['Human median (draw)'] = ann_medDraw\n",
+    "#df2['Human median (draw)'] = ann_medDraw\n",
     "\n",
     "# get ground truths from jsons\n",
+    "ann_medDraw_convert = []\n",
     "gt_medians = []\n",
     "gt_nGaussians = []\n",
     "for i in range(len(df2)):\n",
@@ -306,14 +204,22 @@
     "    # nGaussian from data params\n",
     "    gt_nGaussians.append(j['plot0']['data']['data params']['nclusters'])\n",
     "\n",
+    "    # for human draw, translate to pixels\n",
+    "    xs_pixels = j['plot0']['data pixels']['xs'] # bar centers in pixels\n",
+    "    edges = np.array(j['plot0']['data from plot']['data'][1]) # [0,1] are height, edges output form histogram\n",
+    "    centers = edges[:-1] + 0.5*np.abs(edges[:-1] - edges[1:])\n",
+    "    med = (ann_medDraw[i] - np.min(xs_pixels))/(np.max(xs_pixels)-np.min(xs_pixels))*(np.max(centers) - np.min(centers)) + np.min(centers)\n",
+    "    ann_medDraw_convert.append(med)\n",
+    "\n",
+    "df2['Human median (draw)'] = ann_medDraw_convert\n",
     "df2['Ground Truth nGaussian'] = gt_nGaussians\n",
     "df2['Ground Truth Median'] = gt_medians"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "3fe872b3",
+   "execution_count": 124,
+   "id": "2fe9e9e8",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +259,7 @@
        "      <td>id_0041.jpeg</td>\n",
        "      <td>1</td>\n",
        "      <td>0.055</td>\n",
-       "      <td>501.769531</td>\n",
+       "      <td>0.055269</td>\n",
        "      <td>1</td>\n",
        "      <td>0.054428</td>\n",
        "    </tr>\n",
@@ -363,7 +269,7 @@
        "      <td>id_0014.jpeg</td>\n",
        "      <td>3</td>\n",
        "      <td>0.450</td>\n",
-       "      <td>380.515625</td>\n",
+       "      <td>0.457472</td>\n",
        "      <td>1</td>\n",
        "      <td>0.478811</td>\n",
        "    </tr>\n",
@@ -373,7 +279,7 @@
        "      <td>id_0028.jpeg</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.420</td>\n",
-       "      <td>458.597656</td>\n",
+       "      <td>-0.415863</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.417302</td>\n",
        "    </tr>\n",
@@ -383,7 +289,7 @@
        "      <td>id_0057.jpeg</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.700</td>\n",
-       "      <td>389.261719</td>\n",
+       "      <td>-0.707283</td>\n",
        "      <td>2</td>\n",
        "      <td>-0.758364</td>\n",
        "    </tr>\n",
@@ -393,7 +299,7 @@
        "      <td>id_0020.jpeg</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.200</td>\n",
-       "      <td>463.078125</td>\n",
+       "      <td>-0.171428</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.178007</td>\n",
        "    </tr>\n",
@@ -410,14 +316,14 @@
        "5  annotator1  id_0020.jpeg                 1                 -0.200   \n",
        "\n",
        "   Human median (draw)  Ground Truth nGaussian  Ground Truth Median  \n",
-       "1           501.769531                       1             0.054428  \n",
-       "2           380.515625                       1             0.478811  \n",
-       "3           458.597656                       2            -0.417302  \n",
-       "4           389.261719                       2            -0.758364  \n",
-       "5           463.078125                       1            -0.178007  "
+       "1             0.055269                       1             0.054428  \n",
+       "2             0.457472                       1             0.478811  \n",
+       "3            -0.415863                       2            -0.417302  \n",
+       "4            -0.707283                       2            -0.758364  \n",
+       "5            -0.171428                       1            -0.178007  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,211 +334,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "0cad7b52",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0']['data']['data params']['nclusters']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "931fde1f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['xs', 'ys', 'xs_right', 'ys_right', 'xs_left', 'ys_left', 'colors'])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0']['data pixels'].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "id": "03a8a8e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['data', 'plot params'])"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0']['data from plot'].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "id": "f47ec93e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'linethick': 1,\n",
-       " 'linestyles': '-',\n",
-       " 'bar color': 'cyan',\n",
-       " 'edge color': [[0, 0, 0]],\n",
-       " 'orientation': 'vertical',\n",
-       " 'rwidth': 1.0,\n",
-       " 'nbins': 20}"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0']['data from plot']['plot params']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "id": "df76fe95",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['figure', 'plot0', 'VQA'])"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "id": "fa1b989d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'dpi': 300,\n",
-       " 'base': 5,\n",
-       " 'aspect ratio': 1.333,\n",
-       " 'nrows': 1,\n",
-       " 'ncols': 1,\n",
-       " 'plot style': 'default',\n",
-       " 'color map': 'Blues',\n",
-       " 'title fontsize': 12,\n",
-       " 'xlabel fontsize': 8,\n",
-       " 'ylabel fontsize': 8,\n",
-       " 'plot indexes': [[0, 0]]}"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['figure']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "3fce2691",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['type', 'distribution', 'data', 'data pixels', 'data from plot', 'xticks', 'yticks', 'square', 'title', 'xlabel', 'ylabel'])"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0'].keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "id": "59eb52ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'xmin': 192.6404517796116,\n",
-       " 'ymin': 154.83333333333334,\n",
-       " 'xmax': 754.0450112528131,\n",
-       " 'ymax': 492.99999999999994}"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "j['plot0']['square']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "542ffb37",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a4d521d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "id": "0e049eac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save to file\n",
+    "df2.to_csv('./resources/cleaned_zooniverse.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85e2d5a8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3a210c4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e415a414",
    "metadata": {},
    "outputs": [],
    "source": []
