first round plots

--- a/zooniverse/parse_zooniverse_human_data.ipynb
+++ b/zooniverse/parse_zooniverse_human_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 13,
    "id": "1fcb0795",
    "metadata": {},
    "outputs": [],
@@ -21,12 +21,12 @@
     "zoonie_subjects = '/Users/jnaiman/Downloads/tmp/JCDL2025/zooniverse/jcdl-et-al-subjects.csv'\n",
     "\n",
     "# where ground truth jsons are\n",
-    "gt_jsons = './example_hists/jsons/'"
+    "gt_jsons = '../example_hists/jsons/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "1117eb2c",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "17021e31",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "0d1b3ed0",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "array([112268234, 112268235, 112268236, 112268237, 112268238])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "f4129029",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "f4491bc2",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 19,
    "id": "6c163e2a",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 20,
    "id": "eac5ca54",
    "metadata": {},
    "outputs": [],
@@ -212,13 +212,13 @@
     "    ann_medDraw_convert.append(med)\n",
     "\n",
     "df2['Human median (draw)'] = ann_medDraw_convert\n",
-    "df2['Ground Truth nGaussian'] = gt_nGaussians\n",
+    "df2['Ground Truth nGaussians'] = gt_nGaussians\n",
     "df2['Ground Truth Median'] = gt_medians"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 21,
    "id": "2fe9e9e8",
    "metadata": {},
    "outputs": [
@@ -248,7 +248,7 @@
        "      <th>Human nGaussians</th>\n",
        "      <th>Human median (number)</th>\n",
        "      <th>Human median (draw)</th>\n",
-       "      <th>Ground Truth nGaussian</th>\n",
+       "      <th>Ground Truth nGaussians</th>\n",
        "      <th>Ground Truth Median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -315,15 +315,15 @@
        "4  annotator1  id_0057.jpeg                 2                 -0.700   \n",
        "5  annotator1  id_0020.jpeg                 1                 -0.200   \n",
        "\n",
-       "   Human median (draw)  Ground Truth nGaussian  Ground Truth Median  \n",
-       "1             0.055269                       1             0.054428  \n",
-       "2             0.457472                       1             0.478811  \n",
-       "3            -0.415863                       2            -0.417302  \n",
-       "4            -0.707283                       2            -0.758364  \n",
-       "5            -0.171428                       1            -0.178007  "
+       "   Human median (draw)  Ground Truth nGaussians  Ground Truth Median  \n",
+       "1             0.055269                        1             0.054428  \n",
+       "2             0.457472                        1             0.478811  \n",
+       "3            -0.415863                        2            -0.417302  \n",
+       "4            -0.707283                        2            -0.758364  \n",
+       "5            -0.171428                        1            -0.178007  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,13 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "id": "0e049eac",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save to file\n",
-    "df2.to_csv('./resources/cleaned_zooniverse.csv', index=False)"
+    "df2.to_csv('./cleaned_zooniverse.csv', index=False)"
    ]
   },
   {
