--- a/zooniverse/parse_zooniverse_human_data.ipynb
+++ b/zooniverse/parse_zooniverse_human_data.ipynb
@@ -172,7 +172,7 @@
     "\n",
     "    anns = json.loads(d['annotations'])\n",
     "    for ann in anns:\n",
-    "        if 'how many gauss' in ann['task_label'].lower():\n",
+    "        if 'how many gauss' in ann['task_label'].lower(): # JPN -- this is inefficient, make sure you come back and change!\n",
     "            ann_nGaussians.append(int(ann['value']))\n",
     "        elif ('median' in ann['task_label'].lower()) and ('as a number' in ann['task_label'].lower()):\n",
     "            ann_medNum.append(float(ann['value']))\n",
@@ -345,11 +345,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "85e2d5a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['image file'].nunique()"
+   ]
   },
   {
    "cell_type": "code",
@@ -363,6 +376,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e415a414",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bf477a5",
    "metadata": {},
    "outputs": [],
    "source": []
